# aws-datalake-example

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml  deploy-infrastructure.yml  deploy-jobs.yml  deploy-lambdas.yml  lambda-deploy-reusable.yml  release-jobs.yml  release-lambdas.yml  release.yml
docs/: glue_jobs.md  glue_jobs_trigger.md  local_glue_ui.md  s3_event_processing.md  test_api_data_fetch.md
glue-jobs/: .gitignore  README.md  docker-compose.yml  log4j-local.properties  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
glue-jobs/local/data/api_data_fetch/: api_response.json
glue-jobs/scripts/: package.sh  run_integration_with_wheel.sh  run_local.sh  test_s3_events.sh
glue-jobs/src/: config.py  transformations.py
glue-jobs/src/glue_etl_lib/: __init__.py  base_job.py  transformations.py
glue-jobs/src/glue_etl_lib/utils/: api_client.py  logging.py  secrets.py
glue-jobs/src/jobs/: __init__.py  api_data_fetch.py  api_to_lake.py  base_job.py  customer_import.py  inventory_sync.py  product_catalog.py  sales_etl.py  simple_etl.py
glue-jobs/src/transformations/: __init__.py  common.py
glue-jobs/src/utils/: __init__.py  api_client.py  audit.py  dlq_handler.py  logging_config.py  notifications.py  secrets.py  simple_data_quality.py
glue-jobs/src/validators/: data_quality.py  schemas.py
glue-jobs/test_data/api_to_lake/: products_api.json
glue-jobs/test_data/simple_etl/: customers.csv
glue-jobs/tests/: conftest.py  factories.py  test_api_to_lake.py  test_simple_etl.py  test_transformations.py
glue-jobs/tests/integration/: __init__.py  test_api_data_fetch_integration.py  test_api_to_lake_integration.py  test_common_integration.py  test_cross_job_integration.py  test_customer_import_integration.py  test_data_builders.py  test_edge_cases_integration.py  test_error_handling_integration.py  test_inventory_sync_integration.py  test_job_runner.py  test_sales_etl_integration.py  test_simple_etl_integration.py
glue-jobs/tests/test_data/: inventory.csv  products.csv  products_vendor_a.csv  products_vendor_b.csv  sales.csv
glue-jobs/tests/test_data/customer_import/: customers.csv  customers_edge_cases.csv
glue-jobs/tests/test_data/inventory_sync/: inventory_api.json  inventory_edge_cases.csv
glue-jobs/tests/test_data/sales_etl/: products_edge_cases.csv  products_vendor_a.csv  products_vendor_b.csv  sales_edge_cases.csv
glue-jobs/tests/test_data/shared/: generate_large_datasets.py
glue-jobs/tests/unit/: test_api_data_fetch.py  test_logging_config.py  test_transformations.py  test_utils.py  test_validators.py
infrastructure/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/environments/prod/: backend.tf  main.tf
infrastructure/environments/staging/: backend.tf  variables.tf
infrastructure/modules/eventbridge/: main.tf  outputs.tf  variables.tf
infrastructure/modules/lambda/: main.tf  outputs.tf  variables.tf
infrastructure/modules/secrets-manager/: main.tf  outputs.tf  variables.tf
infrastructure/modules/sns-notifications/: main.tf  outputs.tf  variables.tf
infrastructure/modules/sqs-dlq/: main.tf  outputs.tf  variables.tf
lambdas/data_lake_to_api/: README.md  pyproject.toml
lambdas/data_lake_to_api/scripts/: package.sh
lambdas/data_lake_to_api/src/: api_client.py  config.py  data_connector.py  handler.py
lambdas/data_lake_to_api/tests/: conftest.py  test_handler.py
lambdas/sns_glue_trigger/: README.md  pyproject.toml
lambdas/sns_glue_trigger/src/: __init__.py  handler.py
lambdas/sns_glue_trigger/tests/: test_handler.py
lambdas/sns_glue_trigger/tests/test_events/: eventbridge_format.json  sample_sns_event.json  simple_format.json
runbooks/: data-quality-issues.md  job-failure-recovery.md  monitoring-guide.md
