[project]
name = "aws-glue-etl-example"
version = "1.0.0"
description = "Simple AWS Glue ETL Pipeline Examples"
authors = [
    {name = "Data Engineering Team"}
]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    # AWS SDK
    "boto3>=1.28.0",
    # HTTP & API
    "httpx>=0.25.0",
    "tenacity>=8.0.0",
    # Logging
    "loguru>=0.7.0", 
    # Configuration & Validation
    "pydantic>=2.0.0",
    # Data processing (for local testing)
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# See https://beta.ruff.rs/docs/rules/ for a full list of supported rules.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "moto>=4.2.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pyspark==3.5.2",
    "boto3-stubs>=1.40.17",
    "mypy-boto3>=1.40.0",
]
